<resources>
    <string name="app_name">LoanCalculator</string>
    <string name="car_price">Car Price</string>
    <string name="payment_amount">Down Payment Amount</string>
    <string name="loan_period">Loan Period (Year)</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="calculate">Calculate</string>
    <string name="car_loan">Car Loan</string>
    <string name="Calculator">Car Loan Calculator</string>
    <string name="car_loan_title">Car Loan</string>
    <string name="interest_title">Interest</string>
</resources>
